# bitsparrow-derive

./: Cargo.toml  LICENSE  README.md
benches/: lib.rs
src/: decode.rs  encode.rs  lib.rs
tests/: derive.rs
