[package]
name = "bitsparrow-derive"
version = "0.1.0"
authors = ["maciej.hirsz@gmail.com"]
description = "#[derive] macro for BitSparrow implementation in Rust"
homepage = "http://bitsparrow.io/"
documentation = "http://bitsparrow.io/doc/bitsparrow/"
repository = "https://github.com/bitsparrow/bitsparrow-rust"
license = "MIT"

[features]
unstable = []

[lib]
name = "bitsparrow_derive"
proc-macro = true

[dependencies]
quote = "0.3.8"
syn = "*"

[dev-dependencies]
bitsparrow = "2.0.0-rc1"
