[package]
name = "bitsparrow-derive"
version = "0.1.1"
authors = ["maciej.hirsz@gmail.com"]
description = "Derive macros for BitSparrow implementation in Rust"
homepage = "http://bitsparrow.io/"
# documentation = "http://bitsparrow.io/doc/bitsparrow/"
repository = "https://github.com/bitsparrow/bitsparrow-derive"
license = "MIT"

[lib]
name = "bitsparrow_derive"
proc-macro = true

[dependencies]
quote = "0.3.8"
syn = "0.11.4"

[dev-dependencies]
bitsparrow = "2.0.0-rc1"
